Fix mobile wishlist top spacing

--- a/src/containers/wishlist/styles.scss
+++ b/src/containers/wishlist/styles.scss
@@ -191,9 +191,11 @@
     font-family: $font-Serif;
   }
 .wishlist-block-outer {
-    // margin: 150px 0 100px 0;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    margin: 150px 0 100px 0;
+}
+.wishlist-block-outer-mobile {
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .wishlist_bottom {
     display: inline-block;
